# gongsiri

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  lefthook.yml  pyproject.toml
backend/: agent_client.py  agent_qa_runtime.py  agent_report_runtime.py  agent_runtime_common.py  agent_runtime_service.py  agent_service.py  http_contracts.py  main.py  openapi.json  pyproject.toml  report_runtime_builders.py  report_runtime_common.py  report_runtime_views.py  report_views.py
backend/analyzer/: checklist.py  checklist_support.py  pipeline.py  preparation.py  qa.py  solar_step1.py  solar_step2.py
backend/auth/: __init__.py  dev_auth.py  dev_session.py
backend/collector/: company_resolver.py  dart.py  dart_corp_index.py  dart_parser.py  document_parse.py  naver_research.py  normalize.py  report_downloader.py  report_finder.py  runtime_normalize.py
backend/fixtures/: dev_seed.json
backend/routes/: dev_auth_routes.py  dev_data_routes.py  disclosure_check_routes.py  disclosure_routes.py  external_api_routes.py  pipeline_routes.py  qa_routes.py  quote_routes.py  report_cache_routes.py  report_routes.py  stocks_routes.py  watchlist_routes.py
backend/schemas/: analysis.py  bundle.py  external_api.py  pipeline.py  watchlist.py
backend/services/: report_envelope.py  report_seed.py
backend/storage/: __init__.py  connection.py  fixture_loader.py  json_store.py  repositories.py  schema.py  seed.py  sqlite_analysis.py  sqlite_cache.py  sqlite_identity.py  sqlite_repositories.py  sqlite_rows.py
backend/tests/: test_analysis_contract.py  (+8 more)
(+202 files in other folders)
